--- a/Dato/Datos.csproj
+++ b/Dato/Datos.csproj
@@ -164,7 +164,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassDatos.cs" />
+    <Compile Include="Model\Entidades.cs" />
+    <Compile Include="Model\GruposEntidades.cs" />
+    <Compile Include="Model\Modelos.cs" />
+    <Compile Include="Model\NoEliminable.cs" />
+    <Compile Include="Model\RedesSociales.cs" />
+    <Compile Include="Model\RolUserEntidad.cs" />
+    <Compile Include="Model\Status.cs" />
+    <Compile Include="Model\TipoDocumento.cs" />
+    <Compile Include="Model\TipoEntidades.cs" />
+    <Compile Include="Model\TipoEntidadPolitica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorios\Repositorio Entidades.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
